Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69538

Drawing issues with Intel HD530/630, 11th Gen Intel UHD

    XMLWordPrintable

Details

    • Windows
    • 08287b77cf (qt/tqtc-qtdeclarative/5.15)

    Description

      Using minimal example attached, when clicking on check box, background becomes white instead of red. Also see screenshots.

      Also, with QQuickStyle::setStyle("Universal") (which sets hover enabled), a more maximum example of similar code resulted in blue/black triangles. This was difficult to reproduce so the example is not attached as of yet.

      Tested on Windows 10 with the following Intel driver versions, all with the same result.

      • 22.20.16.4836
      • 23.20.16.4849
      • 23.20.16.4973
      • 24.20.100.6025
      • 24.20.100.6136

      Further investigation revealed that theĀ  offending commit for the minimal example is in qtdeclarative as seen here:

      https://codereview.qt-project.org/gitweb?p=qt/qtdeclarative.git;a=commitdiff;h=ba05397ad723fa19125eb5ca2f91c7f437b2148

      Building Qt with -DQSG_SEPARATE_INDEX_BUFFER fixes the bug. However, this commit is somewhere between Qt 5.10 and 5.11 and when rebuilding 5.11 with -DQSG_SEPARATE_INDEX_BUFFER the bug still exists. In general it appears that it does relate to the index buffer being separate to the vertex buffer.

      Attachments

        1. 5_11_bug.PNG
          5_11_bug.PNG
          4 kB
        2. 5_11_expected.PNG
          5_11_expected.PNG
          7 kB
        3. qt_5_11_intel_bug.zip
          9 kB
        4. Qt5.15.9-Default.gif
          Qt5.15.9-Default.gif
          596 kB
        5. Qt5.15.9-Universal.gif
          Qt5.15.9-Universal.gif
          234 kB
        6. Qt5.15.9-Universal2.gif
          Qt5.15.9-Universal2.gif
          325 kB
        7. Qt5.15.9-Universal-snapshot.png
          Qt5.15.9-Universal-snapshot.png
          10 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lagocs Laszlo Agocs
              daniel.hatadi Daniel Hatadi
              Votes:
              3 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes