Stop using the same buffer for vertex and index data

1) This does not work with Intel's OpenGL implementation from the last
   few years (at least since around 2018). One simply gets artifacts,
   probably related to updating the data in the buffer (as initial
   drawing seems correct, but subsequent frames, if there is a change
   in geometry, tend to get rendering errors sooner or later).

2) Due to the webgl platform plugin this has already been optional,
   using a runtime check. Now we just remove the conditional and
   always behave as is separateIndexBuffer was true.

3) This matches Qt 6. An index buffer is always separate in Qt 6.

4) GL_ARB_vertex_buffer_object says:

   "Note that it is expected that implementations may have different
   memory type requirements for efficient storage of indices and
   vertices.  For example, some systems may prefer indices in AGP
   memory and vertices in video memory, or vice versa; or, on
   systems where DMA of index data is not supported, index data must
   be stored in (cacheable) system memory for acceptable
   performance.  As a result, applications are strongly urged to
   put their models' vertex and index data in separate buffers, to
   assist drivers in choosing the most efficient locations."

Fixes: QTBUG-69538
Change-Id: I0c56f401a202a2ba2c1f8aff4b1c4f9ff6d6ae31
Reviewed-by: Christian Strømme <christian.stromme@qt.io>